--- a/info.css
+++ b/info.css
@@ -1,4 +1,9 @@
 body {
     color: black;
-    background-color: rosybrown;
+    background-color: teal;
 }
+
+#navbar li {
+    display: inline-block;
+}
+
